# libcastis_heartbeat

./: .gitignore  CMakeLists.txt  README.md  ServiceMonitorLibs.sln
asio_base/: CMakeLists.txt  HeartBeatSession.cpp  HeartBeatSession.h
examples/asio_base/: CMakeLists.txt  asio_base.cpp
examples/legacy_compatible/: CMakeLists.txt  legacy_compatable.cpp
examples/legacy_compatible_complex_with_ciutils/: CMakeLists.txt  CiHBResponserWithCiUtils.cpp  SampleHBClientComplex.cpp  SampleHBClientComplex.h  legacy_compatible_complex_with_ciutils.cpp
examples/legacy_compatible_with_ciutils/: CMakeLists.txt  CiHBResponserWithCiUtils.h  legacy_compatable_with_ciutils.cpp
legacy_compatible/: CMakeLists.txt  CiHBResponser.cpp  CiHBResponser.h  legacy_support.cpp  legacy_support.h
legacy_linux/: CiHB.vcproj  CiHBAddress.cpp  CiHBAddress.h  CiHBAddressList.cpp  CiHBAddressList.h  CiHBDefines.h  CiHBRequester.cpp  CiHBRequester.h  CiHBResponser.cpp  CiHBResponser.h  Makefile  legacy_support.cpp  legacy_support.h  stdafx.cpp  stdafx.h
